# Claude-memory

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  dokploy-setup.md
.claude/skills/ai-dashboard-platform/: SKILL.md
.claude/skills/awesome-patterns/: SKILL.md
.claude/skills/memory-system/: SKILL.md
.claude/skills/superpowers/: SKILL.md
backend/: Dockerfile  config.js  package-lock.json  package.json  server.js
backend/agent/: engine.js
backend/mcp/: server.js
backend/middleware/: auth.js  error-handler.js  rate-limit.js
backend/migrations/: init.sql
backend/routes/: agent.js  browse.js  dashboard.js  health.js  memory.js  search.js  workflow.js
backend/services/: browserless.js  embedding.js  llm.js  n8n.js  postgres.js  qdrant.js  searxng.js  valkey.js
config/searxng/: limiter.toml  settings.yml
extension/: package.json
extension/src/: extension.js
services/embedding/: Cargo.toml  Dockerfile
services/embedding/src/: main.rs
services/monitor/: Dockerfile  main.go
tests/playwright/: dashboard.html  dashboard.spec.js  package.json  playwright.config.js
tools/ai-cli/: go.mod  main.go
